--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/andres-napuri"
+  linkedin         : andres-napuri
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
