--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Andrés Napurí"
 title_separator          : "-"
 name                     : &name "Andrés Napurí"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Andrés Napurí's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Andrés Napurí"
   pronouns         : "he/him, él"  
-  bio              : "linguist"
+  bio              : "linguist and social scientist"
   location         : "Brooklyn, NYC"
   employer         : "New York University"
   uri              : #
@@ -41,14 +41,14 @@ author:
   orcid            : "http://orcid.org/0000-0003-1103-572X"
   semantic         : # URL
   pubmed           : # URL
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Andres-Napuri-3"
   scopus           : "https://www.scopus.com/authid/detail.uri?authorId=57204018457"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # Username
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
